kubernetes/deployment/kubealpine.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
  labels:
    app: alpine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - name: alpine
        image: 6261998/alpine:latest
        tty: true
        stdin: true
        #imagePullPolicy: Always
