kubernetes/deployment/kube-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bugtesting
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: bugtesting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: bugtesting
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
